# CCOS

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
ccos/: __init__.py  app.py  auth.py  config.py  hooks.py  main.py  plan.py
ccos/commands/: __init__.py  builtin.py  registry.py
ccos/engine/: __init__.py  cost_tracker.py  message_manager.py  query_engine.py  tool_executor.py
ccos/history/: __init__.py  session.py
ccos/mcp/: __init__.py  client.py  tools.py  transport.py  types.py
ccos/memory/: __init__.py  extractor.py  recall.py  store.py  types.py
ccos/permissions/: __init__.py  manager.py  prompts.py
ccos/prompt/: __init__.py  builder.py  context.py  memory.py  sections.py
ccos/providers/: __init__.py  anthropic.py  base.py  gemini.py  llamacpp.py  ollama.py  openai.py  openai_compat.py  registry.py
ccos/skills/: __init__.py  arguments.py  executor.py  frontmatter.py  loader.py  registry.py  types.py
ccos/tools/: __init__.py  agent.py  ask_user.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  notebook_edit.py  plan_mode.py  powershell.py  skill_tool.py  task_tools.py  todo.py  tool_search.py  web_fetch.py  web_search.py
ccos/ui/: __init__.py  clipboard.py  figures.py  input.py  renderer.py  status.py  themes.py
ccos/utils/: __init__.py  paths.py  platform_info.py
