[project]
name = "ccos"
version = "0.1.0"
description = "Production-grade agentic coding CLI — supports any LLM provider"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "click>=8.1",
]

[project.optional-dependencies]
all = [
    "google-auth>=2.0",
    "boto3>=1.34",
    "pymupdf>=1.24.0",
]

[project.scripts]
ccos = "ccos.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
